--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
+    "nodemailer": "^7.0.11",
     "tailwind-merge": "^3.4.0"
   }
 }
